--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.103.2"
 uvicorn = "^0.23.2"
-
+databases = "^0.8.0"
 
 [build-system]
 requires = ["poetry-core"]
